My first Queen J work done on time with the class

--- a/Attributes101.html
+++ b/Attributes101.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="main.css"> 
 </head>
 <body>
+	<p class="tea">I reign supreme</p>
+	<p>Tea is served at 4pm sharp!!!</p>
+	<p>Could you pass me the sugar, Please?</p>
 
 </body>
 </html>
