--- a/Week 5 XX2/1 Push Code.html
+++ b/Week 5 XX2/1 Push Code.html
@@ -5,3 +5,10 @@ git commit -m "first commit"
 git remote add origin https://github.com//QueenJacqulyn/
 git push -u origin master
 
+follow this path
+
+git init
+git add --all
+git commit -m "first commit"
+git push -u 
+
