--- a/1 Push Code.html
+++ b/1 Push Code.html
@@ -5,3 +5,11 @@ git commit -m "first commit"
 git remote add origin https://github.com//QueenJacqulyn/
 git push -u origin master
 
+
+cd ~
+cd Desktop/CreatingWebsiteAssignments/
+git init
+git add --all
+git commit -m "put in whatever"
+git push 
+
