--- a/Week  2/create this page.html
+++ b/Week  2/create this page.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Challenge #1</title>
+    <title></title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
+<img src="pic/surf.jpg" alt="A man surfing a wave">
+
 <!-- emmet notation -->
-<!-- (h1#element${Header $$$}+p*3>lorem)*4 -->
+ <!--(h1#element${Header $$$}+p*3>lorem)*4-->
 <h1 id="element1">Header 001</h1>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus beatae enim inventore ratione tempora! Asperiores
