--- a/Week  2/create this page.html
+++ b/Week  2/create this page.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-<img src="pic/surf.jpg" alt="A man surfing a wave">
+<img src="surferdude.jpg">
+
 
 <!-- emmet notation -->
- <!--(h1#element${Header $$$}+p*3>lorem)*4-->
+<!-- (h1#element${Header $$$}+p*3>lorem)*4 -->
 <h1 id="element1">Header 001</h1>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus beatae enim inventore ratione tempora! Asperiores
